2003-06-03    <karl@gnu.org>

	* config.sub: update from prep.

2003-06-02    <karl@gnu.org>

	* mkinstalldirs (version): new variable.
	(--version): new option.
	(usage): improve message.

2003-05-29    <karl@gnu.org>

	* config.rpath: update from gettext.

2003-05-24    <karl@gnu.org>

	* config.guess: update from prep.

2003-05-20    <karl@gnu.org>

	* config.guess: update from prep.

2003-05-18    <karl@gnu.org>

	* srclistvars.sh (TEXMF): use TEXMFROOT instead, since TEXMF might
		actually be set by the user.

	* depcomp, install-sh, mdate-sh: update from automake.

2003-05-11    <karl@gnu.org>

	* config.{guess,sub}: update from prep.

2003-01-03    <karl@gnu.org>

	* config.{guess,sub}: update from prep.

2002-12-24    <karl@gnu.org>

	* config.guess: update from prep.

2002-12-19    <karl@gnu.org>

	* config.guess: update from prep.

2002-12-12    <karl@gnu.org>

	* config.guess: update from prep.

2002-11-25    <karl@gnu.org>

	* install-sh: update from automake for variable quoting, $0 in
	error msgs, etc.

	* srclist.txt ($LIBCSRC/time/mktime.c lib gpl): new entry.
	* srclist.txt ($LIBCSRC/sysdeps/generic/strtoll.c lib gpl): new
	entry.

2002-11-14    <karl@gnu.org>

	* mkinstalldirs: `do' on separate line, instead of `for var; do'.

2002-09-28    <karl@gnu.org>

	* srclist.txt: can't copy install-sh/mkinstalldirs from installed
	automake until the next release, since changes have been made.

2002-09-25    <karl@gnu.org>

	* srclist.txt: enable gettext.h check.
	* config.{guess,sub}: update from prep.
	* depcomp, install-sh, mdate-sh, missing, mkinstalldirs: update
		from automake 1.6.3.
	See srclist*.

2002-02-17  Jim Meyering  <meyering@lucent.com>

	* config.guess (main): Don't use `head -1'; it's no longer portable.
        Use `sed 1q' instead.