@@ -1,4 +1,4 @@
-# $Id: srclist.txt,v 1.13 2003-06-03 12:55:44 karl Exp $
+# $Id: srclist.txt,v 1.14 2003-06-04 20:09:47 eggert Exp $
 # Files for which we are not the source.  See ./srclistvars.sh for the
 # variable definitions.
 
@@ -27,7 +27,8 @@ $LIBCSRC/posix/getopt.h			lib gpl
 $LIBCSRC/posix/getopt1.c		lib gpl
 $LIBCSRC/posix/regex.h			lib gpl
 $LIBCSRC/string/strdup.c		lib gpl
-$LIBCSRC/time/mktime.c			lib gpl
+# This can be uncommented after libc mktime is fixed.
+#$LIBCSRC/time/mktime.c			lib gpl
 #
 # - libc/sysdeps/generic has memcpy.c, memmove.c, strcasecmp.c, but they
 #   are totally different implementations.
